<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.icij</groupId>
  <artifactId>intellij-code-formatter</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <ide.version>2025.3.1</ide.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>app</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/app.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>util</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/util.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>util_rt</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/util_rt.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>util-8</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/util-8.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>lib</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/lib.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>jps-model</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/jps-model.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.libraries.fastutil</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.libraries.fastutil.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.libraries.kotlinx.collections.immutable</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.libraries.kotlinx.collections.immutable.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.libraries.guava</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.libraries.guava.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>opentelemetry</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/opentelemetry.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.regexp</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.regexp.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.parser</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.parser.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.psi</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.psi.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.psi.impl</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.psi.impl.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.analysis</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.analysis.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.analysis.impl</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.analysis.impl.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.impl</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.impl.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.ui.common</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.ui.common.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>module-intellij.xml.syntax</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/lib/module-intellij.xml.syntax.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>java-impl</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/java/lib/java-impl.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>java-impl-frontend</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/java/lib/java-impl-frontend.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>Groovy</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/Groovy/lib/Groovy.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>properties</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/properties/lib/properties.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>yaml</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/yaml/lib/yaml.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>json</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/json/lib/json.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>kotlin-plugin</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/Kotlin/lib/kotlin-plugin.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>kotlin-plugin-shared</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/Kotlin/lib/kotlin-plugin-shared.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>downloaded-intellij-jar</groupId>
      <artifactId>kotlinc.kotlin-compiler-common</artifactId>
      <version>${ide.version}</version>
      <scope>system</scope>
      <systemPath>${project.build.directory}/ide/plugins/Kotlin/lib/kotlinc.kotlin-compiler-common.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib</artifactId>
      <version>1.8.10</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlinx</groupId>
      <artifactId>kotlinx-coroutines-core</artifactId>
      <version>1.6.4</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>24.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.intellij.deps</groupId>
      <artifactId>trove4j</artifactId>
      <version>1.0.20200330</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>2.20.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml</groupId>
      <artifactId>aalto-xml</artifactId>
      <version>1.3.3</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlinx</groupId>
      <artifactId>kotlinx-serialization-core</artifactId>
      <version>1.5.1</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlinx</groupId>
      <artifactId>kotlinx-serialization-json</artifactId>
      <version>1.5.1</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.30</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.googlecode.maven-download-plugin</groupId>
        <artifactId>download-maven-plugin</artifactId>
        <version>1.9.0</version>
        <executions>
          <execution>
            <id>download-idea</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>wget</goal>
            </goals>
            <configuration>
              <url>https://download-cdn.jetbrains.com/idea/idea-${ide.version}.win.zip</url>
              <outputDirectory>${project.build.directory}/idea-downloads</outputDirectory>
              <outputFileName>idea-${ide.version}.win.zip</outputFileName>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>extract-idea-jars</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <unzip src="${project.build.directory}/idea-downloads/idea-${ide.version}.win.zip"
                       dest="${project.build.directory}/ide">
                  <patternset>
                    <include name="lib/app.jar"/>
                    <include name="lib/util.jar"/>
                    <include name="lib/util_rt.jar"/>
                    <include name="lib/util-8.jar"/>
                    <include name="lib/lib.jar"/>
                    <include name="lib/jps-model.jar"/>
                    <include name="lib/module-intellij.libraries.fastutil.jar"/>
                    <include name="lib/module-intellij.libraries.kotlinx.collections.immutable.jar"/>
                    <include name="lib/module-intellij.libraries.guava.jar"/>
                    <include name="lib/opentelemetry.jar"/>
                    <include name="lib/module-intellij.regexp.jar"/>
                    <include name="lib/module-intellij.xml.parser.jar"/>
                    <include name="lib/module-intellij.xml.psi.jar"/>
                    <include name="lib/module-intellij.xml.psi.impl.jar"/>
                    <include name="lib/module-intellij.xml.analysis.jar"/>
                    <include name="lib/module-intellij.xml.analysis.impl.jar"/>
                    <include name="lib/module-intellij.xml.impl.jar"/>
                    <include name="lib/module-intellij.xml.ui.common.jar"/>
                    <include name="lib/module-intellij.xml.syntax.jar"/>
                    <include name="plugins/java/lib/java-impl.jar"/>
                    <include name="plugins/java/lib/java-impl-frontend.jar"/>
                    <include name="plugins/Groovy/lib/Groovy.jar"/>
                    <include name="plugins/properties/lib/properties.jar"/>
                    <include name="plugins/yaml/lib/yaml.jar"/>
                    <include name="plugins/json/lib/json.jar"/>
                    <include name="plugins/Kotlin/lib/kotlin-plugin.jar"/>
                    <include name="plugins/Kotlin/lib/kotlin-plugin-shared.jar"/>
                    <include name="plugins/Kotlin/lib/kotlinc.kotlin-compiler-common.jar"/>
                  </patternset>
                </unzip>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
